--- a/1.profile-cell-lines/0.inspect-profiles.Rmd
+++ b/1.profile-cell-lines/0.inspect-profiles.Rmd
@@ -499,135 +499,37 @@ similarity_isolated <- measure_profile_similarity(profiles_isolated)
 
 ```
 
-### Measure *absolute difference* of cell counts between profiles
 
 ```{r}
-# get data matrix
-data_matrix <-
-  cell_count %>%
-  select(-matches("Metadata"))
-
-# get metadata
-metadata <-
-  cell_count %>%
-  select(matches("Metadata")) %>%
-  rowid_to_column(var = "id")
-
-# measure similarities between treatments
-count_similarity <- abs(outer(data_matrix$Count_Cells, data_matrix$Count_Cells, FUN = "-"))
-
-colnames(count_similarity) <- seq(1, ncol(count_similarity))
-
-count_similarity %<>% 
-  as_tibble() %>% 
-  rowid_to_column(var = "id1") %>% 
-  gather(id2, cell_count_abs_diff, -id1) %>% 
-  mutate(id2 = as.integer(id2)) %>%
-  filter(id1 > id2) %>% 
-  arrange(desc(cell_count_abs_diff))
-
-# annotate the similarities data frame
-count_similarity %<>%
-  inner_join(metadata %>% 
-               select(id, 
-                      Metadata_line_ID,
-                      Metadata_plating_density), 
-             by = c("id1" = "id")) %>% 
-  rename(Metadata_line_ID1 = Metadata_line_ID, 
-         Metadata_plating_density1 = Metadata_plating_density)  %>%
-  inner_join(metadata %>% 
-               select(id, 
-                      Metadata_line_ID,
-                      Metadata_plating_density), 
-             by = c("id2" = "id")) %>%
-  rename(Metadata_line_ID2 = Metadata_line_ID, 
-         Metadata_plating_density2 = Metadata_plating_density) %>% 
-  arrange(desc(cell_count_abs_diff))
-```
-
-### Measure *average* of cell counts of pairs of profiles
-
-```{r}
-# get data matrix
-data_matrix <-
-  cell_count %>%
-  select(-matches("Metadata"))
-
-# get metadata
-metadata <-
-  cell_count %>%
-  select(matches("Metadata")) %>%
-  rowid_to_column(var = "id")
-
-# measure similarities between treatments
-count_sum <- abs(outer(data_matrix$Count_Cells, data_matrix$Count_Cells,FUN = "+"))
-
-colnames(count_sum) <- seq(1, ncol(count_sum))
-
-count_sum %<>% 
-  as_tibble() %>% 
-  rowid_to_column(var = "id1") %>% 
-  gather(id2, cell_count_sum, -id1) %>% 
-  mutate(id2 = as.integer(id2)) %>%
-  filter(id1 > id2) %>% 
-  arrange(desc(cell_count_sum))
-
-# annotate the similarities data frame
-count_sum %<>%
-  inner_join(metadata %>% 
-               select(id, 
-                      Metadata_line_ID,
-                      Metadata_plating_density), 
-             by = c("id1" = "id")) %>% 
-  rename(Metadata_line_ID1 = Metadata_line_ID, 
-         Metadata_plating_density1 = Metadata_plating_density)  %>%
-  inner_join(metadata %>% 
-               select(id, 
-                      Metadata_line_ID,
-                      Metadata_plating_density), 
-             by = c("id2" = "id")) %>%
-  rename(Metadata_line_ID2 = Metadata_line_ID, 
-         Metadata_plating_density2 = Metadata_plating_density) %>% 
-  arrange(desc(cell_count_sum))
-```
-
-### Combine profiles similarity and cell count similarity into a single data frame
-
-Note that the cell counts here are that of all cells from the well, not that of each profile type
-(i.e. we don't computer cell counts for `isolated` and `colony`, we just use the cell counts for the whole well)
-We should revisit whether this is the right approach.
-
-```{r}
-combine_similarities <- function(similarity_i) {
-  similarity_i %<>% 
-    inner_join(count_similarity,
-               by = c("id1", 
-                      "id2", 
-                      "Metadata_line_ID1", 
-                      "Metadata_plating_density1", 
-                      "Metadata_line_ID2", 
-                      "Metadata_plating_density2")) %>%
-  inner_join(count_sum,
-               by = c("id1", 
-                      "id2", 
-                      "Metadata_line_ID1", 
-                      "Metadata_plating_density1", 
-                      "Metadata_line_ID2", 
-                      "Metadata_plating_density2")) 
+attach_cell_count <- function(similarity_i) {
+  similarity_i %>% 
+    inner_join(cell_count,
+               by = c("Metadata_line_ID1" = "Metadata_line_ID", 
+                      "Metadata_plating_density1" = "Metadata_plating_density")
+               ) %>%
+    rename(Count_Cells1 = Count_Cells) %>%
+    inner_join(cell_count,
+               by = c("Metadata_line_ID2" = "Metadata_line_ID", 
+                      "Metadata_plating_density2" = "Metadata_plating_density")
+               ) %>%
+    rename(Count_Cells2 = Count_Cells) %>%
+    mutate(cell_count_abs_diff = abs(Count_Cells1 - Count_Cells2)) %>%
+    mutate(cell_count_sum = (Count_Cells1 + Count_Cells2))
+    
 } 
 
-similarity_all %<>% combine_similarities()
+similarity_all %<>% attach_cell_count()
 
-similarity_colony %<>% combine_similarities()
+similarity_colony %<>% attach_cell_count()
 
-similarity_isolated %<>% combine_similarities()
+similarity_isolated %<>% attach_cell_count()
 
 ```
 
 ### Report relationship between profiles similarity and cell count similarity
 
-```{r} 
 
+```{r} 
 plot_and_save_similarities <- function(similarity, profile_type) {
   p <-
     ggplot(similarity, aes(correlation, cell_count_abs_diff, color = cell_count_sum)) +
@@ -649,12 +551,35 @@ plot_and_save_similarities <- function(similarity, profile_type) {
   
   similarity %>% write_csv(file.path("data", glue("similarity_{profile_type}.csv")))
 }
+```
 
+Report for all cell lines
+
+```{r} 
 plot_and_save_similarities(similarity = similarity_all, profile_type = "all")
 
 plot_and_save_similarities(similarity = similarity_colony, profile_type = "colony")
 
 plot_and_save_similarities(similarity = similarity_isolated, profile_type = "isolated")
+```
+
+
+Report for cell lines after filtering out those that have too few or too many cells
+
+```{r} 
+filter_cell_lines <- function(similarity_i) {
+  
+  similarity_i %>%
+    filter(between(Count_Cells1, 1000, 4000)) %>%
+    filter(between(Count_Cells2, 1000, 4000))
+
+}
+
+plot_and_save_similarities(similarity = filter_cell_lines(similarity_all), profile_type = "all_filtered")
+
+plot_and_save_similarities(similarity = filter_cell_lines(similarity_colony), profile_type = "colony_filtered")
+
+plot_and_save_similarities(similarity = filter_cell_lines(similarity_isolated), profile_type = "isolated_filtered")
 
 ```
 
