- define aggregate function in the notebook - load profiles from profile directory

--- a/1.profile-cell-lines/0.inspect-profiles.Rmd
+++ b/1.profile-cell-lines/0.inspect-profiles.Rmd
@@ -15,6 +15,16 @@ library(magrittr)
 library(tidyverse)
 ```
 
+
+```{r}
+simple_aggregate <- function(population, variables, strata, operation="mean") {
+  population %>%
+    dplyr::group_by_at(.vars = strata) %>%
+    dplyr::summarise_at(.funs = operation, .vars = variables) %>%
+    dplyr::ungroup()
+}
+```
+
 ## Data overview
 
 ### Read profiles
@@ -29,18 +39,16 @@ platemap <- "cmQTL_plate1_5.31.2019"
 
 plate_id <- "cmqtlpl1.5-31-2019-mt"
 
-backend_dir <- file.path("..", "..", "..", "backend")
-
 profiles <- 
-  read_csv(file.path(backend_dir, batch_id, plate_id, paste0(plate_id, "_normalized_variable_selected.csv")), 
+  read_csv(file.path("profiles", paste0(plate_id, "_normalized_variable_selected.csv")), 
            progress = FALSE)
 
 profiles_isolated <- 
-  read_csv(file.path(backend_dir, batch_id, plate_id, paste0(plate_id, "_isolated_normalized_variable_selected.csv")), 
+  read_csv(file.path("profiles", paste0(plate_id, "_isolated_normalized_variable_selected.csv")), 
            progress = FALSE)
 
 profiles_colony <- 
-  read_csv(file.path(backend_dir, batch_id, plate_id, paste0(plate_id, "_colony_normalized_variable_selected.csv")), 
+  read_csv(file.path("profiles", paste0(plate_id, "_colony_normalized_variable_selected.csv")), 
            progress = FALSE)
 
 ```
@@ -273,7 +281,7 @@ df <-
   audit_detailed_all %>%
   inner_join(
     cell_count %>%
-      cytominer::aggregate(
+      simple_aggregate(
         variables = c("Count_Cells"),
         strata = c("Metadata_line_ID", "Metadata_plating_density"),
         operation = "median"
@@ -353,7 +361,7 @@ create_augmented_profiles <- function(profiles, profile_type_i) {
     select(matches("^Metadata_"), everything())
   
   augmented_profiles_i %>%
-   write_csv(file.path(backend_dir, batch_id, plate_id, glue("{plate_id}{profile_type_i}_normalized_variable_selected_augmented.csv")))
+   write_csv(file.path("profiles", glue("{plate_id}{profile_type_i}_normalized_variable_selected_augmented.csv")))
   
   augmented_profiles_i
 }
@@ -423,7 +431,7 @@ aggregate_profiles <- function(profiles) {
   variables <- str_subset(names(profiles), cp_column_match)
   
   profiles %<>%
-    cytominer::aggregate(variables = variables, 
+    simple_aggregate(variables = variables, 
                          strata = c("Metadata_line_ID", "Metadata_plating_density"),
                          operation = "median")
 }
@@ -435,7 +443,7 @@ profiles_colony %<>% aggregate_profiles()
 profiles_isolated %<>% aggregate_profiles()
 
 cell_count %<>%
-  cytominer::aggregate(variables = c("Count_Cells"), 
+  simple_aggregate(variables = c("Count_Cells"), 
                        strata = c("Metadata_line_ID", "Metadata_plating_density"),
                        operation = "median")
   
@@ -590,7 +598,7 @@ Load ../../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019
 
 ### Inspect the tight cluster
 
-```{r}
+```{r eval=FALSE}
 tight_cluster <- 
   CePa::read.gct("figures/morpheus/tight_cluster.gct") %>%
   as_data_frame() 
