Reknit notebook with new version of profiles. The variable selected version of the profiles have changed because the variable selection now uses both plates in the batch. The normalized and augmented versions of the profiles remain unchanged.

--- a/1.profile-cell-lines/0.inspect-profiles.md
+++ b/1.profile-cell-lines/0.inspect-profiles.md
@@ -12,6 +12,15 @@ library(magrittr)
 library(tidyverse)
 ```
 
+``` r
+simple_aggregate <- function(population, variables, strata, operation="mean") {
+  population %>%
+    dplyr::group_by_at(.vars = strata) %>%
+    dplyr::summarise_at(.funs = operation, .vars = variables) %>%
+    dplyr::ungroup()
+}
+```
+
 ## Data overview
 
 ### Read profiles
@@ -27,18 +36,16 @@ platemap <- "cmQTL_plate1_5.31.2019"
 
 plate_id <- "cmqtlpl1.5-31-2019-mt"
 
-backend_dir <- file.path("..", "..", "..", "backend")
-
 profiles <- 
-  read_csv(file.path(backend_dir, batch_id, plate_id, paste0(plate_id, "_normalized_variable_selected.csv")), 
+  read_csv(file.path("profiles", paste0(plate_id, "_normalized_variable_selected.csv")), 
            progress = FALSE)
 
 profiles_isolated <- 
-  read_csv(file.path(backend_dir, batch_id, plate_id, paste0(plate_id, "_isolated_normalized_variable_selected.csv")), 
+  read_csv(file.path("profiles", paste0(plate_id, "_isolated_normalized_variable_selected.csv")), 
            progress = FALSE)
 
 profiles_colony <- 
-  read_csv(file.path(backend_dir, batch_id, plate_id, paste0(plate_id, "_colony_normalized_variable_selected.csv")), 
+  read_csv(file.path("profiles", paste0(plate_id, "_colony_normalized_variable_selected.csv")), 
            progress = FALSE)
 ```
 
@@ -68,9 +75,9 @@ tribble(~profile_type, ~feature_space,
     ## # A tibble: 3 x 2
     ##   profile_type feature_space
     ##   <chr>                <int>
-    ## 1 all                    431
-    ## 2 isolated               875
-    ## 3 colony                 506
+    ## 1 all                    599
+    ## 2 isolated               934
+    ## 3 colony                 732
 
 ``` r
 profiles %>% select(matches("Metadata_")) %>% head()
@@ -150,7 +157,7 @@ replicates_per_line
 ```
 
     ## # A tibble: 48 x 3
-    ## # Groups:   Metadata_Plate [?]
+    ## # Groups:   Metadata_Plate [1]
     ##    Metadata_Plate        Metadata_line_ID     n
     ##    <chr>                            <dbl> <int>
     ##  1 cmqtlpl1.5-31-2019-mt                1     8
@@ -245,7 +252,7 @@ p <-
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
 
 ``` r
 ggsave(file.path("figures", 
@@ -270,7 +277,7 @@ p <-
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
 
 ``` r
 out_file <- file.path("figures", paste0(platemap, ".png"))
@@ -281,16 +288,13 @@ ggsave(out_file, p, height = 4, width = 6)
 ### Plot cell counts on plate map
 
 ``` r
-# Generate cell counts directly from Image.csv files because the SQLite is too large to load
+# Copy cell counts to profiles/
 # 
-# find../../../analysis/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/analysis/ -name Image.csv -exec csvcut -c Metadata_Well,Count_Cells {} \; > data/count.csv
-# cat <(echo Metadata_Well,Count_Cells) <(grep -v "Metadata_Well,Count_Cells" count.csv|sort) > data/cmqtlpl1.5-31-2019-mt_count.csv
-# verify that `data/cmqtlpl1.5-31-2019-mt_count.csv` looks right and then delete `data/count.csv`
+# find ../../../../backend/ -name "*count*" -exec cp {} profiles/ \;
 
 cell_count <-
-  read_csv(file.path("data", paste0(plate_id, "_count.csv"))) %>%
-  group_by(Metadata_Plate, Metadata_Well) %>%
-  summarize(Count_Cells = sum(Count_Cells))
+  read_csv(file.path("profiles", paste0(plate_id, "_count.csv"))) %>%
+  select(Metadata_Plate, Metadata_Well, Count_Cells)
 ```
 
     ## Parsed with column specification:
@@ -320,7 +324,7 @@ p <-
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
 
 ### Plot cell count vs cell id
 
@@ -345,7 +349,7 @@ p <-
 p
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
 
 ``` r
 ggsave(file.path("figures", 
@@ -360,7 +364,7 @@ df <-
   audit_detailed_all %>%
   inner_join(
     cell_count %>%
-      cytominer::aggregate(
+      simple_aggregate(
         variables = c("Count_Cells"),
         strata = c("Metadata_line_ID", "Metadata_plating_density"),
         operation = "median"
@@ -392,7 +396,7 @@ p <-
 p
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
 
 ``` r
 ggsave(file.path("figures", 
@@ -423,7 +427,7 @@ p <-
 p
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
 
 ``` r
 ggsave(file.path("figures", 
@@ -446,7 +450,7 @@ create_augmented_profiles <- function(profiles, profile_type_i) {
     select(matches("^Metadata_"), everything())
   
   augmented_profiles_i %>%
-   write_csv(file.path(backend_dir, batch_id, plate_id, glue("{plate_id}{profile_type_i}_normalized_variable_selected_augmented.csv")))
+   write_csv(file.path("profiles", glue("{plate_id}{profile_type_i}_normalized_variable_selected_augmented.csv")))
   
   augmented_profiles_i
 }
@@ -476,14 +480,32 @@ Rscript csv2gct.R \
 cd -
 ```
 
-    ## Warning message:
-    ## `data_frame()` is deprecated, use `tibble()`.
+    ## Warning messages:
+    ## 1: select_() is deprecated. 
+    ## Please use select() instead
+    ## 
+    ## The 'programming' vignette or the tidyeval book can help you
+    ## to program with select() : https://tidyeval.tidyverse.org
     ## [90mThis warning is displayed once per session.[39m 
-    ## Warning message:
-    ## `data_frame()` is deprecated, use `tibble()`.
+    ## 2: `data_frame()` is deprecated, use `tibble()`.
     ## [90mThis warning is displayed once per session.[39m 
-    ## Warning message:
-    ## `data_frame()` is deprecated, use `tibble()`.
+    ## Warning messages:
+    ## 1: select_() is deprecated. 
+    ## Please use select() instead
+    ## 
+    ## The 'programming' vignette or the tidyeval book can help you
+    ## to program with select() : https://tidyeval.tidyverse.org
+    ## [90mThis warning is displayed once per session.[39m 
+    ## 2: `data_frame()` is deprecated, use `tibble()`.
+    ## [90mThis warning is displayed once per session.[39m 
+    ## Warning messages:
+    ## 1: select_() is deprecated. 
+    ## Please use select() instead
+    ## 
+    ## The 'programming' vignette or the tidyeval book can help you
+    ## to program with select() : https://tidyeval.tidyverse.org
+    ## [90mThis warning is displayed once per session.[39m 
+    ## 2: `data_frame()` is deprecated, use `tibble()`.
     ## [90mThis warning is displayed once per session.[39m 
     ## /Users/shsingh/work/projects/2018_06_05_cmQTL/workspace/software/cmQTL/1.profile-cell-lines
 
@@ -510,19 +532,19 @@ plot_replicate_correlations_platemap <- function(augmented_profiles_i, profile_t
 plot_replicate_correlations_platemap(augmented_profiles, "all")
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-18-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-19-1.png)<!-- -->
 
 ``` r
 plot_replicate_correlations_platemap(augmented_profiles_colony, "colony")
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-18-2.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-19-2.png)<!-- -->
 
 ``` r
 plot_replicate_correlations_platemap(augmented_profiles_isolated, "isolated")
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-18-3.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-19-3.png)<!-- -->
 
 ## Does cell plating density drive similarities?
 
@@ -533,7 +555,7 @@ aggregate_profiles <- function(profiles) {
   variables <- str_subset(names(profiles), cp_column_match)
   
   profiles %<>%
-    cytominer::aggregate(variables = variables, 
+    simple_aggregate(variables = variables, 
                          strata = c("Metadata_line_ID", "Metadata_plating_density"),
                          operation = "median")
 }
@@ -545,7 +567,7 @@ profiles_colony %<>% aggregate_profiles()
 profiles_isolated %<>% aggregate_profiles()
 
 cell_count %<>%
-  cytominer::aggregate(variables = c("Count_Cells"), 
+  simple_aggregate(variables = c("Count_Cells"), 
                        strata = c("Metadata_line_ID", "Metadata_plating_density"),
                        operation = "median")
 ```
@@ -662,19 +684,19 @@ lines
 plot_and_save_similarities(similarity = similarity_all, profile_type = "all")
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-23-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-24-1.png)<!-- -->
 
 ``` r
 plot_and_save_similarities(similarity = similarity_colony, profile_type = "colony")
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-23-2.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-24-2.png)<!-- -->
 
 ``` r
 plot_and_save_similarities(similarity = similarity_isolated, profile_type = "isolated")
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-23-3.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-24-3.png)<!-- -->
 
 Report for cell lines after filtering out those that have too few or too
 many cells
@@ -691,19 +713,19 @@ filter_cell_lines <- function(similarity_i) {
 plot_and_save_similarities(similarity = filter_cell_lines(similarity_all), profile_type = "all_filtered")
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-24-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-25-1.png)<!-- -->
 
 ``` r
 plot_and_save_similarities(similarity = filter_cell_lines(similarity_colony), profile_type = "colony_filtered")
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-24-2.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-25-2.png)<!-- -->
 
 ``` r
 plot_and_save_similarities(similarity = filter_cell_lines(similarity_isolated), profile_type = "isolated_filtered")
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-24-3.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-25-3.png)<!-- -->
 
 ## Clustering analysis via Morpheus
 
@@ -721,12 +743,7 @@ in <https://software.broadinstitute.org/morpheus/> and cluster
 tight_cluster <- 
   CePa::read.gct("figures/morpheus/tight_cluster.gct") %>%
   as_data_frame() 
-```
 
-    ## Warning: `as_data_frame()` is deprecated, use `as_tibble()` (but mind the new semantics).
-    ## This warning is displayed once per session.
-
-``` r
 tight_cluster <- 
   tight_cluster[2,] %>% 
   gather(k, v) %>% 
@@ -747,5 +764,3 @@ p <-
 
 print(p)
 ```
-
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-25-1.png)<!-- -->
